--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                 <input data-field="y" type="number" value="0" />
             </div>
 
+            <div data-prop="gap">
+                <b>Gap X / Y</b>
+                <input data-field="x" type="number" value="0" />
+                <input data-field="y" type="number" value="0" />
+            </div>
+
+
             <div data-prop="count">
                 <b>Columns / Rows</b>
                 <input data-field="columns" type="number" value="0" />
@@ -47,7 +54,7 @@
         </section>
 
         <div id="container">
-            <img />
+            <img src="/res/footman.png" />
             <canvas></canvas>
         </div>
     </body>
